--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>TP N10</title>
 </head>
 <body>
+    <div>
+        <h1>Números aleatorios ordenados ascendentemente, en una lista desordenada</h1>
+        <ul id="E1">
+            <li id="1"></li>
+            <li id="2"></li>
+            <li id="3"></li>
+            <li id="4"></li>
+            <li id="5"></li>
+            <li id="6"></li>
+            <li id="7"></li>
+            <li id="8"></li>
+            <li id="9"></li>
+            <li id="10"></li>
+        </ul>
+    </div>
     <table id="tabla">
         <tr>
             <td>tabla</td>
@@ -69,14 +84,43 @@
     </table>
     <div class="noticias">
         <div class="noticia1">
-            <h2 >El curso <i><strong>"Argentina Programa"</strong></i> qué revoluciona el "Mercado IT" de Argentina</h2>
+            <h2>El curso <i><strong>"Argentina Programa"</strong></i> qué revoluciona el "Mercado IT" de Argentina</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Expedita, voluptatum quibusdam ratione in quasi corrupti exercitationem vitae voluptatem officia cupiditate neque. Ab similique iusto quas quae perferendis magni mollitia odio.</p>
-            <button id="btn1" class="noticia1">Agrandar Fuente</button>
-
+            <button id="btn1" class="btn">Agrandar Fuente</button>
         </div>
-
+        <div class="noticia2">
+            <h2>El curso<i><strong>"Argentina Programa"</strong></i> qué revoluciona el "Mercado IT" de Argentina</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Expedita, voluptatum quibusdam ratione in quasi corrupti exercitationem vitae voluptatem officia cupiditate neque. Ab similique iusto quas quae perferendis magni mollitia odio.</p>
+            <button id="btn2" class="btn">Agrandar Fuente</button>
+        </div>
+        <div class="noticia3">
+            <h2>El curso<i><strong>"Argentina Programa"</strong></i> qué revoluciona el "Mercado IT" de Argentina</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Expedita, voluptatum quibusdam ratione in quasi corrupti exercitationem vitae voluptatem officia cupiditate neque. Ab similique iusto quas quae perferendis magni mollitia odio.</p>
+            <button id="btn3" class="btn">Agrandar Fuente</button>
+        </div>
     </div>
 
+        <!-- EJERCICIO15 -->
+        <div>
+            <a id="enlace" href="" target="_blank">Toque el botón del sitio al que quiere dirigirse</a>
+            <div class="container">
+            <button type="button" class="btn btn-info" id="boton1" >La Nación</button>
+            <button type="button" class="btn btn-info" id="boton2" >BBC News</button>
+            <button type="button" class="btn btn-info" id="boton3" >CNN Internacional</button>
+            </div>
+        </div><br><br>
+        <!-- EJERCICIO16 -->
+        <div class="wordHidden">
+            <h1>Toca una palabra para ocultarla</h1>
+            <p id="palabra1"><strong>Argentina</strong></p>
+            <p id="palabra2"><strong>Programa</strong></p>
+            <p id="palabra3"><strong>Andy</strong></p>
+            <p id="palabra4"><strong>Franco</strong></p>
+            <p id="palabra5"><strong>Magali</strong></p>
+            <p id="palabra6"><strong>Ivana</strong></p>
+            <p id="palabra7"><strong>Grupo S</strong></p>
+        </div>
+    
 
     <script src="main.js"></script>
 </body>
